<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="hihebark.cryptor.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/layoutbtn">
        <Button
            android:id="@+id/crypter"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_crypter"
            android:textColor="#fff"
            android:background="@color/light_red"
            android:layout_weight="1"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/decrypter"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_decrypter"
            android:textColor="#fff"
            android:background="@color/light_blue"
            android:layout_weight="1"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_lock_open_black_24dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLinear"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Information_Device"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/layoutfreemem"
        android:background="#64e7e7e7"
        android:padding="15dp">

        <TextView
            android:id="@+id/txtfreememory"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/txt_free_memory"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progressBarfree"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1.9"
            android:max="100"/>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/layouttotmem"
        android:background="#64e7e7e7"
        android:padding="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txttotmemory"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/txt_total_memory"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progressBartot"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:max="100"
            android:layout_gravity="end"/>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/layoutusedmem"
        android:background="#64e7e7e7"
        android:padding="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txtbattery"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/txt_used_memory"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:textStyle="bold"/>
        <ProgressBar
            android:id="@+id/progressbattery"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:max="100"
            android:layout_gravity="end"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/layoutmem"
        android:background="#64e7e7e7"
        android:padding="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/txtmemory"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/txt_memory_internal"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progressmemory"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:max="100"
            android:layout_gravity="end"/>

    </LinearLayout>


</LinearLayout>